v2.1.0/sphinx/html/_sources/generated/gplately.Raster.rst.txt
gplately.Raster
===============

.. currentmodule:: gplately

.. autoclass:: Raster

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~Raster.__init__
      ~Raster.clip_by_extent
      ~Raster.clip_by_polygons
      ~Raster.copy
      ~Raster.fill_NaNs
      ~Raster.fill_gaps
      ~Raster.from_points
      ~Raster.imshow
      ~Raster.interp
      ~Raster.interpolate
      ~Raster.is_global
      ~Raster.is_longitude_wrapped
      ~Raster.is_normalized
      ~Raster.normalized
      ~Raster.plot
      ~Raster.query
      ~Raster.reconstruct
      ~Raster.resample
      ~Raster.resize
      ~Raster.rotate_reference_frames
      ~Raster.sample_values
      ~Raster.save_as_image
      ~Raster.save_to_netcdf4
      ~Raster.to_data_array
      ~Raster.to_longitude_positive_360
      ~Raster.to_longitude_signed_180
      ~Raster.unwrap_longitude
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Raster.data
      ~Raster.dtype
      ~Raster.extent
      ~Raster.filename
      ~Raster.fill_value
      ~Raster.lats
      ~Raster.longitude_convention
      ~Raster.lons
      ~Raster.masked_data
      ~Raster.ndim
      ~Raster.normalized_extent
      ~Raster.origin
      ~Raster.plate_reconstruction
      ~Raster.shape
      ~Raster.size
      ~Raster.time
   
   